General updates for 2020
Changed dates, blugold dining logo, removed gallery tab, removed online raffle options, and updated contact for Scheels.

--- a/directions.html
+++ b/directions.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/brand.css">
 
-  <title>Jig's Up | Direction</title>
+  <title>Jig's Up | Directions</title>
 
   <link rel="apple-touch-icon" sizes="57x57" href="./favicon/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="./favicon/apple-icon-60x60.png">
@@ -59,8 +59,6 @@
                 <a class="dropdown-item brand-blue" href="lodging.html" >Lodging</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item brand-blue" href="pastResults.html">Results</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item disabled" href="#">Gallery</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item brand-blue" href="assets/2019_Rules_of_the_Tournament.pdf">Rules</a>
                 <div class="dropdown-divider"></div>
@@ -201,7 +199,7 @@
     <div class="row mx-6">
       <div class="col-lg col-6 text-center my-auto">
         <a href="http://www.uwec.edu/dining/" class="sponsor">
-          <img src="./images/sponsors/dining.png" class="img-fluid" alt="Dining">
+          <img src="./images/sponsors/dining2020.png" class="img-fluid" alt="Dining">
         </a>
       </div>
       <div class="col-lg col-6 text-center my-auto">
