--- a/index.html
+++ b/index.html
@@ -61,8 +61,6 @@
               <div class="dropdown-divider"></div>
               <a class="dropdown-item brand-blue" href="pastResults.html">Results</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item disabled" href="#">Gallery</a>
-              <div class="dropdown-divider"></div>
               <a class="dropdown-item brand-blue" href="assets/2019_Rules_of_the_Tournament.pdf">Rules</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item brand-blue" href="assets/WIFA_details.pdf">WIFA Tournament</a>
@@ -104,7 +102,7 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block img-fluid" src="./images/slider/bleepbloop.jpeg" alt="First slide">
+              <img class="d-block img-fluid" src="./images/slider/logo2020.png" alt="First slide">
             </div>
             <div class="carousel-item">
               <img class="d-block img-fluid" src="./images/slider/slide2.jpeg" alt="Second slide">
@@ -151,7 +149,7 @@
 
     <div class="text-center">
       <h5 class="headers brand-blue">UWEC Recreation, Blugold Athletics, and the Lake Wissota Lions Club presents:</h5>
-      <h1 class="headers brand-blue"><b>6th Annual JIG'S UP Blugold Ice Fishing Contest</b></h1>
+      <h1 class="headers brand-blue"><b>7th Annual JIG'S UP Blugold Ice Fishing Contest</b></h1>
       <div class="row justify-content-center">
         <div class="col-4 col-md-3">
           <a href="http://www.uwec.edu/recreation"><img src="./images/recreation2.png" class=" logo img-fluid " alt="Recreation"></a>
@@ -169,7 +167,7 @@
       <div class="col-lg-6">
         <div class="row px-3">
           <h3 class="d-block-inline brand-blue"><b>Date:</b></h3>
-          <h5 class="d-block-inline my-auto ml-2">Saturday, February 9th, 2019</h5>
+          <h5 class="d-block-inline my-auto ml-2">Saturday, February 8th, 2020</h5>
         </div>
         <div class="row px-3">
           <h3 class="d-inline-block brand-blue"><b>Time:</b></h3>
@@ -195,9 +193,9 @@
           </div>
           <div class="col-12 p-0">
             <ul class="bulletless-grey">
-              <li class="mb-2">Over $80,000 in cash and prizes including a 2-year lease on a <b>2019 Ford F150 Truck</b> drawn from all registered Fish Tickets! Prizes awarded to the top 25 fish and every 5th place thereafter by weight to 300th place so even a small fish can win big! </li>
+              <li class="mb-2">Over $80,000 in cash and prizes including a 2-year lease on a <b>2020 Ford F150 Truck</b> drawn from all registered Fish Tickets! Prizes awarded to the top 25 fish and every 5th place thereafter by weight to 300th place so even a small fish can win big! </li>
               <li class="mb-2"><b>Each participant may register one fish per ticket;</b> tickets are $25 with no limit on the number of tickets an individual can purchase. Everyone who registers a fish may request two free Blugold Football Tickets at the weigh-in stations (value $16). </li>
-              <li class="mb-2">Raffle prizes include a <b>2019 Polaris Sportsman 450 4-wheeler</b>, raffle tickets are $5 each or 5 for $20! $100 Gift card prizes for the top fish by weight in each category: northern, walleye, and pan fish. "The One that Got Away" drawing from all Fish Ticket holders that did not register a fish, turn in Fish Ticket stub at the Prize Table at The View by 2:30pm.</li>
+              <li class="mb-2">Raffle prizes include a <b>2020 Polaris Sportsman 450 4-wheeler</b>, raffle tickets are $5 each or 5 for $20! $100 Gift card prizes for the top fish by weight in each category: northern, walleye, and pan fish. "The One that Got Away" drawing from all Fish Ticket holders that did not register a fish, turn in Fish Ticket stub at the Prize Table at The View by 2:30pm.</li>
             </ul>
           </div>
         </div>
@@ -208,7 +206,7 @@
           <div class="col-12">
             Purchase tickets at the following locations:
             <ul class="bulletless-grey">
-    					<li>Online at jigsup.org <span style="color:red">*</span></li>
+    					<li>Online at jigsup.org <span style="color:red"></span></li>
     					<li>Scheels (bait available) <span style="color:red">*</span></li>
     					<li>Select Mega Holiday Stations</li>
               <li>Lake Wissota Travel Stop</li>
@@ -294,7 +292,7 @@
     <div class="row mx-6">
       <div class="col-lg col-6 text-center my-auto">
         <a href="http://www.uwec.edu/dining/" class="sponsor">
-          <img src="./images/sponsors/dining.png" class="img-fluid" alt="Dining">
+          <img src="./images/sponsors/dining2020.png" class="img-fluid" alt="Dining">
         </a>
       </div>
       <div class="col-lg col-6 text-center my-auto">
