--- a/prizes.html
+++ b/prizes.html
@@ -61,8 +61,6 @@
               <div class="dropdown-divider"></div>
               <a class="dropdown-item brand-blue" href="pastResults.html">Results</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item disabled" href="#">Gallery</a>
-              <div class="dropdown-divider"></div>
               <a class="dropdown-item brand-blue" href="assets/2019_Rules_of_the_Tournament.pdf">Rules</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item brand-blue" href="assets/WIFA_details.pdf">WIFA Tournament</a>
@@ -102,9 +100,6 @@
     <div class="col">
       <div class="row">
         <h2 class="brand-blue">Prizes</h2>
-      </div>
-      <div class="row">
-        <h4 class="brand-blue">2018/2019 Prize List</h4>
       </div>
       <div class="row">
         <div class="col px-0">
@@ -1123,7 +1118,7 @@
     <div class="row mx-6">
       <div class="col-lg col-6 text-center my-auto">
         <a href="http://www.uwec.edu/dining/" class="sponsor">
-          <img src="./images/sponsors/dining.png" class="img-fluid" alt="Dining">
+          <img src="./images/sponsors/dining2020.png" class="img-fluid" alt="Dining">
         </a>
       </div>
       <div class="col-lg col-6 text-center my-auto">
