--- a/sponsors.html
+++ b/sponsors.html
@@ -60,8 +60,6 @@
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item brand-blue" href="pastResults.html">Results</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item disabled" href="#">Gallery</a>
-                <div class="dropdown-divider"></div>
                 <a class="dropdown-item brand-blue" href="assets/2019_Rules_of_the_Tournament.pdf">Rules</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item brand-blue" href="assets/WIFA_details.pdf">WIFA Tournament</a>
@@ -151,7 +149,7 @@
         <div class="row">
           <div class="col-4 col-md text-center my-auto">
             <a href="http://www.uwec.edu/dining/" class="sponsors">
-              <img src="./images/sponsors/dining.png" class="img-fluid" alt="Dining">
+              <img src="./images/sponsors/dining2020.png" class="img-fluid" alt="Dining">
             </a>
           </div>
           <div class="col-4 col-md text-center my-auto">
