--- a/tickets.html
+++ b/tickets.html
@@ -61,8 +61,6 @@
               <div class="dropdown-divider"></div>
               <a class="dropdown-item brand-blue" href="pastResults.html">Results</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item disabled" href="#">Gallery</a>
-              <div class="dropdown-divider"></div>
               <a class="dropdown-item brand-blue" href="assets/2019_Rules_of_the_Tournament.pdf">Rules</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item brand-blue" href="assets/WIFA_details.pdf">WIFA Tournament</a>
@@ -115,7 +113,7 @@
 			<div class="col-12">
 				<ul class="px-6">
 					<li>Prizes awarded to the top 25 fish and every 5th place thereafter by weight to the 300th place so even a small fish can win big!</li>
-					<li>The winner of the 2-year lease from Eau Claire Ford for the 2019 Ford F-150 will be drawn at random from the tickets stubs of all registered fish.</li>
+					<li>The winner of the 2-year lease from Eau Claire Ford for the 2020 Ford F-150 will be drawn at random from the tickets stubs of all registered fish.</li>
 					<li>Everyone who registers a fish may request two free Blugold Football Tickets at the weigh-in stations (value $16).</li>
 					<li>$100 gift cards will be given to the top fish by species: Northern, Walleye and Pan Fish.</li>
 					<li>“The One that Got Away” drawing from all Fish Ticket holders that did not register a fish. Turn in Fish Ticket stub at the Prize Table at The View by 2:30pm.</li>
@@ -125,9 +123,9 @@
 
 		<div class="row">
 			<div class="col-12 mx-2">
-				<p><h5 class="d-inline brand-blue">Fish Ticket Availability:</h5> Tickets will be available online until 10:00pm on Friday, February 8th. Fish Tickets will be available on February 9th, 2019 at the weigh-in stations and The View until 9am for $40.</p>
+				<p><h5 class="d-inline brand-blue">Fish Ticket Availability:</h5> Tickets will be available online until 10:00pm on Friday, February 7th. Fish Tickets will be available on February 8th, 2020 at the weigh-in stations and The View until 9am for $40.</p>
 				<ul class="bulletless-grey py-1 pr-2">
-					<li><h5 class="my-0">Fish Tickets purchased online will be mailed through February 1st to the address indicated. After February 1st, tickets will be available for pick-up at the weigh-in station at The View. NOTE: You do not need to pick up your Fish Tickets until you are ready to weigh in a fish.</h5></li>
+					<li><h5 class="my-0">Fish Tickets purchased online will be mailed through January 31st to the address indicated. After January 31st, tickets will be available for pick-up at the weigh-in station at The View. NOTE: You do not need to pick up your Fish Tickets until you are ready to weigh in a fish.</h5></li>
 				</ul>
 			</div>
 		</div>
@@ -136,9 +134,9 @@
 			<div class="col-12 mx-2">
 				<p><h5 class="d-inline brand-blue">Raffle Tickets:</h5> $5 each or 5 for $20</p>
 				<ul class="bulletless-grey py-1 pr-2">
-					<li><h5 class="my-0">$7,500 in prizes includes a 2019 Polaris Sportsman 450 4-wheeler! Tickets can be purchased up until the drawing on Saturday, February 9th at the weigh-in stations and The View.</h5></li>
+					<li><h5 class="my-0">$7,500 in prizes includes a 2020 Polaris Sportsman 450 4-wheeler! Tickets can be purchased up until the drawing on Saturday, February 8th at the weigh-in stations and The View.</h5></li>
 					<li><br/></li>
-					<li><h5 class="my-0">Raffle tickets purchased online will have the stubs completed by contest officials and entered into the drawing. Claim tickets will be mailed through February 1st to the address indicated. After February 1st, claim tickets will be available for pick-up at the weigh-in station at The View. NOTE: Raffle drawing begins at 3:00pm at The View. Please pick up claim tickets by 2:00pm. Need not be present to win.</h5></li>
+					<li><h5 class="my-0">Claim tickets will be mailed through January 31st to the address indicated. After January 31st, claim tickets will be available for pick-up at the weigh-in station at The View. NOTE: Raffle drawing begins at 3:00pm at The View. Please pick up claim tickets by 2:00pm. Need not be present to win.</h5></li>
 				</ul>
 			</div>
 		</div>
@@ -147,7 +145,7 @@
 			<div class="col-12">
 				<h5 class="brand-blue mt-3">Tickets can also be purchased at:</h5>
 				<ul class="bulletless-grey">
-					<li>Online at jigsup.org <span style="color:red">*</span></li>
+					<li>Online at jigsup.org <span style="color:red"></span></li>
 					<li>Scheels (bait available) <span style="color:red">*</span></li>
 					<li>Select Mega Holiday Stations</li>
           <li>Lake Wissota Travel Stop</li>
@@ -206,7 +204,7 @@
     <div class="row mx-6">
       <div class="col-lg col-6 text-center my-auto">
         <a href="http://www.uwec.edu/dining/" class="sponsor">
-          <img src="./images/sponsors/dining.png" class="img-fluid" alt="Dining">
+          <img src="./images/sponsors/dining2020.png" class="img-fluid" alt="Dining">
         </a>
       </div>
       <div class="col-lg col-6 text-center my-auto">
