--- a/contact.html
+++ b/contact.html
@@ -240,7 +240,7 @@
       </div>
       <div class="col-lg-3 col-sm-6 my-auto">
         <a href="http://www.prestigervauto.com/" class="sponsor">
-          <img src="./images/sponsors/prestige.png" class="img-fluid" alt="Prestige">
+          <img src="./images/sponsors/prestige1.png" class="img-fluid" alt="Prestige">
         </a>
       </div>
     </div>
@@ -267,7 +267,7 @@
       </div>
       <div class="col-lg col-6 text-center my-auto" class="sponsor">
         <a href="http://www.xtrememotorsportsllc.com/" class="sponsor">
-          <img src="./images/sponsors/xtreme.png" class="img-fluid" alt="Xtreme">
+          <img src="./images/sponsors/xtreme1.png" class="img-fluid" alt="Xtreme">
         </a>
       </div>
       <div class="col-lg col-6 text-center my-auto">
