--- a/pastResults.html
+++ b/pastResults.html
@@ -1837,8 +1837,8 @@
         </a>
       </div>
       <div class="col-lg col-6 text-center my-auto" class="sponsor">
-        <a href="http://www.xtrememotorsportsllc.com/" class="sponsor">
-          <img src="./images/sponsors/xtreme.png" class="img-fluid" alt="Xtreme">
+        <a href="http://www.xtreme1motorsportsllc.com/" class="sponsor">
+          <img src="./images/sponsors/xtreme1.png" class="img-fluid" alt="Xtreme">
         </a>
       </div>
       <div class="col-lg col-6 text-center my-auto">
