--- a/sponsors.html
+++ b/sponsors.html
@@ -142,7 +142,7 @@
           </div>
           <div class="col-6 col-md text-center my-auto">
             <a href="http://www.prestigervauto.com/" class="sponsors">
-              <img src="./images/sponsors/prestige.png" class="img-fluid" alt="Prestige">
+              <img src="./images/sponsors/prestige1.png" class="img-fluid" alt="Prestige">
             </a>
           </div>
         </div>
@@ -169,7 +169,7 @@
           </div>
           <div class="col-4 col-md text-center my-auto">
             <a href="http://www.xtrememotorsportsllc.com/" class="sponsors">
-              <img src="./images/sponsors/xtreme.png" class="img-fluid" alt="Xtreme">
+              <img src="./images/sponsors/xtreme1.png" class="img-fluid" alt="Xtreme">
             </a>
           </div>
           <div class="col-4 col-md text-center my-auto">
