--- a/schedule.html
+++ b/schedule.html
@@ -214,7 +214,7 @@
       </div>
       <div class="col-lg col-6 text-center my-auto" class="sponsor">
         <a href="http://www.xtrememotorsportsllc.com/" class="sponsor">
-          <img src="./images/sponsors/xtreme.png" class="img-fluid" alt="Xtreme">
+          <img src="./images/sponsors/xtreme1.png" class="img-fluid" alt="Xtreme">
         </a>
       </div>
       <div class="col-lg col-6 text-center my-auto">
