--- a/lodging.html
+++ b/lodging.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+  
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-67939602-1"></script>
 <script>
@@ -12,7 +12,7 @@
   gtag('config', 'UA-67939602-1');
 </script>
 
-
+  
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -69,6 +69,8 @@
                 <a class="dropdown-item brand-blue" href="schedule.html">Schedule</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item brand-blue" href="lodging.html" >Lodging</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item brand-blue" href="pastResults.html">Results</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item brand-blue" href="assets/2019_Rules_of_the_Tournament.pdf">Rules</a>
                 <div class="dropdown-divider"></div>
