--- a/pastResults.html
+++ b/pastResults.html
@@ -11,7 +11,7 @@
   gtag('config', 'UA-67939602-1');
 </script>
 
-
+	
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -68,6 +68,8 @@
                 <a class="dropdown-item brand-blue" href="schedule.html">Schedule</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item brand-blue" href="lodging.html" >Lodging</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item brand-blue" href="pastResults.html">Results</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item brand-blue" href="assets/2019_Rules_of_the_Tournament.pdf">Rules</a>
                 <div class="dropdown-divider"></div>
