Updated Prizes page and logos
Removed Results page and consolidated it on to Prizes. Updated logos on all of the pages

--- a/index.html
+++ b/index.html
@@ -69,8 +69,6 @@
               <div class="dropdown-divider"></div>
               <a class="dropdown-item brand-blue" href="lodging.html" >Lodging</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item brand-blue" href="pastResults.html">Results</a>
-              <div class="dropdown-divider"></div>
               <a class="dropdown-item brand-blue" href="assets/2019_Rules_of_the_Tournament.pdf">Rules</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item brand-blue" href="assets/WIFA_details.pdf">WIFA Tournament</a>
@@ -139,20 +137,26 @@
       </div>
     </div>
 
+
     <div class="row mx-6">
-      <div class="col-4 my-auto">
+      <div class="col my-auto">
         <a href="http://www.scheels.com" target="_blank">
           <img class="img-fluid" src="./images/sponsors/scheels.png" alt="Scheels">
         </a>
       </div>
-      <div class="col-4 my-auto">
+      <div class="col my-auto">
         <a href="http://www.eauclaireford.com/" target="_blank">
           <img class="img-fluid" src="./images/sponsors/ford.png" alt="Ford">
         </a>
       </div>
-      <div class="col-4 my-auto">
+      <div class="col my-auto">
         <a href="http://www.subway.com/subwayroot/default.aspx" target="_blank">
           <img class="img-fluid" src="./images/sponsors/Subway.png" alt="Subway">
+        </a>
+      </div>
+      <div class="col-2 my-auto">
+        <a href="https://www.airforce.com/" target="_blank">
+          <img class="img-fluid" src="./images/sponsors/airforce.png" alt="United States Air Force">
         </a>
       </div>
     </div>
@@ -262,39 +266,44 @@
   </div>
   <div class="footer container border border-bottom-0 pb-2 bg-light d-block mx-auto pt-2">
     <div class="row mx-6">
-      <div class="col-lg-4 text-center my-auto">
+      <div class="col-lg-3 text-center my-auto mx-auto">
         <a href="http://www.scheels.com/" class="title-sponsor">
           <img src="./images/sponsors/scheels.png" class="img-fluid" alt="Scheels">
         </a>
       </div>
-      <div class="col-lg-4 text-center my-auto">
+      <div class="col-lg-3 text-center my-auto mx-auto">
         <a href="http://www.eauclaireford.com/" class="title-sponsor">
           <img src="./images/sponsors/ford.png" class="img-fluid" alt="Ford">
         </a>
       </div>
-      <div class="col-lg-4 text-center my-auto">
+      <div class="col-lg-3 text-center my-auto mx-auto">
         <a href="http://www.subway.com/subwayroot/default.aspx" class="title-sponsor">
           <img src="./images/sponsors/Subway.png" class="img-fluid" alt="Subway">
         </a>
       </div>
+      <div class="col-lg-2 text-center my-auto mx-auto">
+        <a href="http://www.airforce.com" class="title-sponsor">
+          <img src="./images/sponsors/airforce.png" class="img-fluid" alt="United States Air Force">
+        </a>
+      </div>
     </div>
     <div class="row mx-6">
-      <div class="col-lg-3 col-sm-6 my-auto">
+      <div class="col-lg-3 col-sm-6 my-autom mx-auto">
         <a href="http://www.weau.com/" class="sponsor">
           <img src="./images/sponsors/weau13.png" class="img-fluid" alt="WEAU13">
         </a>
       </div>
-      <div class="col-lg-3 col-sm-6 my-auto">
+      <div class="col-lg-2 col-sm-6 my-auto mx-auto">
         <a href="http://www.geteskimo.com/" class="sponsor">
           <img src="./images/sponsors/eskimo.png" class="img-fluid" alt="Eskimo">
         </a>
       </div>
-      <div class="col-lg-3 col-sm-6 my-auto">
+      <div class="col-lg-2 col-sm-6 my-auto mx-auto">
         <a href="http://www.megacoop.com/" class="sponsor">
           <img src="./images/sponsors/megaholiday.png" class="img-fluid" alt="Mega Holiday">
         </a>
       </div>
-      <div class="col-lg-3 col-sm-6 my-auto">
+      <div class="col-lg-2 col-sm-6 my-auto mx-auto">
         <a href="http://www.prestigervauto.com/" class="sponsor">
           <img src="./images/sponsors/prestige1.png" class="img-fluid" alt="Prestige">
         </a>
@@ -346,11 +355,11 @@
           <img src="./images/sponsors/grizzly.png" class="img-fluid" alt="Grizzly Coolers">
         </a>
       </div>
-      <div class="col-lg col-6 text-center my-auto">
-        <a href="https://na01.safelinks.protection.outlook.com/?url=www.airforce.com&data=02%7C01%7CSCHILLJB1332%40uwec.edu%7C3f06ddb287954c86d6b608d677dca0a6%7Cdd068b97759349388b3214faef2af1d8%7C0%7C0%7C636828186794658578&sdata=00LFdfhG6de%2Br0%2BY31m5e%2BeM9VP%2BTMdSHNlhd%2Bp5G1o%3D&reserved=0" class="sponsor">
-          <img src="./images/sponsors/airforce.png" class="img-fluid" alt="United States Air Force">
+      <!--<div class="col-lg col-6 text-center my-auto">
+        <a href="https://www.schuetzys.com/" class="sponsor">
+          <img src="./images/sponsors/schuetzys.png" class="img-fluid" alt="Shuetzy's Tavern">
         </a>
-      </div>
+      </div>-->
     </div>
     <p class="text-center my-1">Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a></p>
   </div>
