--- a/sponsors.html
+++ b/sponsors.html
@@ -68,8 +68,6 @@
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item brand-blue" href="lodging.html" >Lodging</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item brand-blue" href="pastResults.html">Results</a>
-                <div class="dropdown-divider"></div>
                 <a class="dropdown-item brand-blue" href="assets/2019_Rules_of_the_Tournament.pdf">Rules</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item brand-blue" href="assets/WIFA_details.pdf">WIFA Tournament</a>
@@ -113,19 +111,24 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-4 text-center my-auto">
+          <div class="col-md-3 text-center my-auto mx-auto">
             <a href="http://www.scheels.com/" class="title-sponsors">
               <img src="./images/sponsors/scheels.png" class="img-fluid" alt="Scheels">
             </a>
           </div>
-          <div class="col-md-4 text-center my-auto">
+          <div class="col-md-3 text-center my-auto mx-auto">
             <a href="http://www.eauclaireford.com/" class="title-sponsors">
               <img src="./images/sponsors/ford.png" class="img-fluid" alt="Ford">
             </a>
           </div>
-          <div class="col-md-4 text-center my-auto">
+          <div class="col-md-3 text-center my-auto mx-auto">
             <a href="http://www.subway.com/subwayroot/default.aspx" class="title-sponsors">
               <img src="./images/sponsors/Subway.png" class="img-fluid" alt="Subway">
+            </a>
+          </div>
+          <div class="col-md-2 text-center my-auto mx-auto">
+            <a href="https://www.airforce.com/" class="title-sponsors">
+              <img src="./images/sponsors/airforce.png" class="img-fluid" alt="United States Air Force">
             </a>
           </div>
         </div>
@@ -135,22 +138,22 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-6 col-md text-center my-auto">
+          <div class="col-3 text-center my-auto mx-auto">
             <a href="http://www.weau.com/" class="sponsors">
               <img src="./images/sponsors/weau13.png" class="img-fluid" alt="WEAU13">
             </a>
           </div>
-          <div class="col-6 col-md text-center my-auto">
+          <div class="col-2 text-center my-auto mx-auto">
             <a href="http://www.geteskimo.com/" class="sponsors">
               <img src="./images/sponsors/eskimo.png" class="img-fluid" alt="Eskimo">
             </a>
           </div>
-          <div class="col-6 col-md text-center my-auto">
+          <div class="col-2 text-center my-auto mx-auto">
             <a href="http://www.megacoop.com/" class="sponsors">
               <img src="./images/sponsors/megaholiday.png" class="img-fluid" alt="Mega Holiday">
             </a>
           </div>
-          <div class="col-6 col-md text-center my-auto">
+          <div class="col-2 text-center my-auto mx-auto">
             <a href="http://www.prestigervauto.com/" class="sponsors">
               <img src="./images/sponsors/prestige1.png" class="img-fluid" alt="Prestige">
             </a>
@@ -202,11 +205,11 @@
               <img src="./images/sponsors/grizzly.png" class="img-fluid" alt="Grizzly Coolers">
             </a>
           </div>
-          <div class="col-4 col-md text-center my-auto">
-            <a href="https://na01.safelinks.protection.outlook.com/?url=www.airforce.com&data=02%7C01%7CSCHILLJB1332%40uwec.edu%7C3f06ddb287954c86d6b608d677dca0a6%7Cdd068b97759349388b3214faef2af1d8%7C0%7C0%7C636828186794658578&sdata=00LFdfhG6de%2Br0%2BY31m5e%2BeM9VP%2BTMdSHNlhd%2Bp5G1o%3D&reserved=0" class="sponsors">
-              <img src="./images/sponsors/airforce.png" class="img-fluid" alt="United States Air Force">
+          <!--<div class="col-lg col-6 text-center my-auto">
+            <a href="https://www.schuetzys.com/" class="sponsor">
+              <img src="./images/sponsors/schuetzys.png" class="img-fluid" alt="Shuetzy's Tavern">
             </a>
-          </div>
+          </div>-->
         </div>
         <div class="row">
           <div class="col-12">
