Update ticked locations

--- a/tickets.html
+++ b/tickets.html
@@ -145,7 +145,7 @@
 				<ul class="bulletless-grey">
 					<li>Online at jigsup.org <span style="color:red"></span></li>
 					<li>Scheels (bait available) <span style="color:red">*</span></li>
-					<li>Select Mega Holiday Stations</li>
+					<li>Mega Holiday Stations (Chippewa Falls locations only)</li>
           <li>Lake Wissota Travel Stop</li>
 					<li>Eau Claire Ford<span style="color:red">*</span></li>
 					<li>Jacobson's Hardware (bait available)<span style="color:red">*</span></li>
