Updated air force logo

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           <img class="img-fluid" src="./images/sponsors/Subway.png" alt="Subway">
         </a>
       </div>
-      <div class="col-2 my-auto">
+      <div class="col my-auto">
         <a href="https://www.airforce.com/" target="_blank">
           <img class="img-fluid" src="./images/sponsors/airforce.png" alt="United States Air Force">
         </a>
@@ -281,7 +281,7 @@
           <img src="./images/sponsors/Subway.png" class="img-fluid" alt="Subway">
         </a>
       </div>
-      <div class="col-lg-2 text-center my-auto mx-auto">
+      <div class="col-lg-3 text-center my-auto mx-auto">
         <a href="http://www.airforce.com" class="title-sponsor">
           <img src="./images/sponsors/airforce.png" class="img-fluid" alt="United States Air Force">
         </a>
