Added donation option

--- a/tickets.html
+++ b/tickets.html
@@ -97,7 +97,8 @@
   <div class="container px-4">
     <div class="row">
 			<div class="col mx-2">
-				<h2 class="brand-blue"><a href="https://eventbrite.com/e/jigs-up-blugold-ice-fishing-contest-on-lake-wissota-tickets-72157724697">Buy Tickets Here!</a></h2>
+				<h2 class="brand-blue"><a href="https://eventbrite.com/e/jigs-up-blugold-ice-fishing-contest-on-lake-wissota-tickets-72157724697" target="_blank">Buy Tickets or Donate Here!</a></h2>
+        <i>*If donating, click the link above and navigate to the tickets button</i>
 			</div>
     </div>
 
