Added Reconyx Logo
Added the Reconyx logo to all pages.
Moved some old pages into old-pages

--- a/sponsors.html
+++ b/sponsors.html
@@ -158,6 +158,11 @@
               <img src="./images/sponsors/prestige1.png" class="img-fluid" alt="Prestige">
             </a>
           </div>
+          <div class="col-2 text-center my-auto mx-auto">
+            <a href="http://www.reconyx.com/" class="sponsors">
+              <img src="./images/sponsors/Reconyx.png" class="img-fluid" alt="Reconyx">
+            </a>
+          </div>
         </div>
         <div class="row">
           <div class="col-4 col-md text-center my-auto">
