--- a/test.html
+++ b/test.html
@@ -138,24 +138,29 @@
       </div>
     </div>
     <div class="row mx-6">
-      <div class="col-lg-3 col-sm-6 my-auto">
+      <div class="col-lg-2 col-sm-6 my-auto">
         <a href="http://www.weau.com/" class="sponsor">
           <img src="./images/sponsors/weau13.png" class="img-fluid" alt="WEAU13">
         </a>
       </div>
-      <div class="col-lg-3 col-sm-6 my-auto">
+      <div class="col-lg-2 col-sm-6 my-auto">
         <a href="http://www.geteskimo.com/" class="sponsor">
           <img src="./images/sponsors/eskimo.png" class="img-fluid" alt="Eskimo">
         </a>
       </div>
-      <div class="col-lg-3 col-sm-6 my-auto">
+      <div class="col-lg-2 col-sm-6 my-auto">
         <a href="http://www.megacoop.com/" class="sponsor">
           <img src="./images/sponsors/megaholiday.png" class="img-fluid" alt="Mega Holiday">
         </a>
       </div>
-      <div class="col-lg-3 col-sm-6 my-auto">
+      <div class="col-lg-2 col-sm-6 my-auto">
         <a href="http://www.prestigervauto.com/" class="sponsor">
           <img src="./images/sponsors/prestige.png" class="img-fluid" alt="Prestige">
+        </a>
+      </div>
+      <div class="col-lg-2 col-sm-6 my-auto">
+        <a href="http://www.reconyx.com/" class="sponsor">
+          <img src="./images/sponsors/Reconyx.png" class="img-fluid" alt="Reconyx">
         </a>
       </div>
     </div>
