--- a/old-pages/pastResultsNew.html
+++ b/old-pages/pastResultsNew.html
@@ -1824,6 +1824,11 @@
         <a href="http://www.prestigervauto.com/" class="sponsor">
           <img src="./images/sponsors/prestige1.png" class="img-fluid" alt="Prestige">
         </a>
+	  </div>
+	  <div class="col-lg-2 col-sm-6 my-auto mx-auto">
+        <a href="http://www.reconyx.com/" class="sponsor">
+          <img src="./images/sponsors/Reconyx.png" class="img-fluid" alt="Reconyx">
+        </a>
       </div>
     </div>
     <div class="row mx-6">
