--- a/sponsors.html
+++ b/sponsors.html
@@ -158,11 +158,6 @@
               <img src="./images/sponsors/prestige1.png" class="img-fluid" alt="Prestige">
             </a>
           </div>
-          <div class="col-2 text-center my-auto mx-auto">
-            <a href="http://www.reconyx.com/" class="sponsors">
-              <img src="./images/sponsors/Reconyx.png" class="img-fluid" alt="Reconyx">
-            </a>
-          </div>
         </div>
         <div class="row">
           <div class="col-4 col-md text-center my-auto">
@@ -208,6 +203,11 @@
           <div class="col-4 col-md text-center my-auto">
             <a href="https://www.grizzlycoolers.com/" class="sponsors">
               <img src="./images/sponsors/grizzly.png" class="img-fluid" alt="Grizzly Coolers">
+            </a>
+          </div>
+          <div class="col-4 col-md text-center my-auto">
+            <a href="http://www.reconyx.com/" class="sponsors">
+              <img src="./images/sponsors/Reconyx.png" class="img-fluid" alt="Reconyx">
             </a>
           </div>
           <!--<div class="col-lg col-6 text-center my-auto">
