--- a/test.html
+++ b/test.html
@@ -158,11 +158,6 @@
           <img src="./images/sponsors/prestige.png" class="img-fluid" alt="Prestige">
         </a>
       </div>
-      <div class="col-lg-2 col-sm-6 my-auto">
-        <a href="http://www.reconyx.com/" class="sponsor">
-          <img src="./images/sponsors/Reconyx.png" class="img-fluid" alt="Reconyx">
-        </a>
-      </div>
     </div>
     <div class="row mx-6">
       <div class="col-lg col-6 text-center my-auto">
@@ -208,6 +203,11 @@
       <div class="col-lg col-6 text-center my-auto">
         <a href="https://www.grizzlycoolers.com/" class="sponsor">
           <img src="./images/sponsors/grizzly.png" class="img-fluid" alt="Grizzly Coolers">
+        </a>
+      </div>
+      <div class="col-lg col-6 text-center my-auto">
+        <a href="http://www.reconyx.com/" class="sponsor">
+          <img src="./images/sponsors/Reconyx.png" class="img-fluid" alt="Reconyx">
         </a>
       </div>
     </div>
