Removed Grizzly Sponsor
Commented out the Grizzly sponsor from all pages

--- a/index.html
+++ b/index.html
@@ -350,11 +350,11 @@
           <img src="./images/sponsors/thesandbar.png" class="img-fluid" alt="The SandBar">
         </a>
       </div>
-      <div class="col-lg col-6 text-center my-auto">
+      <!--<div class="col-lg col-6 text-center my-auto">
         <a href="https://www.grizzlycoolers.com/" class="sponsor">
           <img src="./images/sponsors/grizzly.png" class="img-fluid" alt="Grizzly Coolers">
         </a>
-      </div>
+      </div>-->
       <div class="col-lg col-6 text-center my-auto">
         <a href="http://www.reconyx.com/" class="sponsor">
           <img src="./images/sponsors/Reconyx.png" class="img-fluid" alt="Reconyx">
