--- a/sponsors.html
+++ b/sponsors.html
@@ -200,11 +200,11 @@
               <img src="./images/sponsors/thesandbar.png" class="img-fluid" alt="The SandBar">
             </a>
           </div>
-          <div class="col-4 col-md text-center my-auto">
+          <!--<div class="col-4 col-md text-center my-auto">
             <a href="https://www.grizzlycoolers.com/" class="sponsors">
               <img src="./images/sponsors/grizzly.png" class="img-fluid" alt="Grizzly Coolers">
             </a>
-          </div>
+          </div>-->
           <div class="col-4 col-md text-center my-auto">
             <a href="http://www.reconyx.com/" class="sponsors">
               <img src="./images/sponsors/Reconyx.png" class="img-fluid" alt="Reconyx">
