--- a/prizes.html
+++ b/prizes.html
@@ -105,17 +105,49 @@
       </div>
     </nav>
   </div>
+
   <div class="container px-4">
     <div class="col">
       <div class="row">
         <h2 class="brand-blue">Prizes</h2>
         <p>Prize winners not present will be contacted within seven days and the prize will need to be claimed within 30 days of the event. All unclaimed prizes will remain the property of UWEC Recreation.  Prizes are the responsibility of the winners, including registration and taxes. Prizes valued at over $500 will require the social security number of the winner. Proper identification is required from all winners in order to complete the 1099-MISC form in accordance with State of Wisconsin tax law, “FEDERAL AND STATE WITHHOLDING ON PAYMENTS TO INDIVIDUALS “ which can be found at <a href="http://www.bussvc.wisc.edu/acct/policy/tax/taxapp2.html">http://www.bussvc.wisc.edu/acct/policy/tax/taxapp2.html</a>.</p>
       </div>
-      <div class="row">
-        <div class="col px-0">
-          <img class="d-block img-fluid my-2" src="./images/prizes/crop_prize.PNG" alt="2019 Prizes">
+    </div>
+  </div>
+
+  <div class="container px-4">
+    <div class="row">
+      <div class="col-md-12">
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block img-fluid" src="./images/prizes/crop_prize.png" alt="First slide">
+            </div>
+            <!--
+            <div class="carousel-item">
+              <img class="d-block img-fluid" src="./images/prizes/TruckPrize2020.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block img-fluid" src="./images/prizes/BigPrizes2020.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block img-fluid" src="./images/prizes/SmallPrizes2020.jpg" alt="Fourth slide">
+            </div>
+          </div>
+          -->
+          <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
         </div>
       </div>
+    </div>
+  </div>
+
       <div class="row">
         <div class="col px-0">
           <div id="accordion1" class="my-4">
