--- a/prizes.html
+++ b/prizes.html
@@ -115,6 +115,7 @@
     </div>
   </div>
 
+  <!--Prizes Slider-->
   <div class="container px-4">
     <div class="row">
       <div class="col-md-12">
@@ -123,6 +124,7 @@
             <div class="carousel-item active">
               <img class="d-block img-fluid" src="./images/prizes/crop_prize.png" alt="First slide">
             </div>
+            
             <!--
             <div class="carousel-item">
               <img class="d-block img-fluid" src="./images/prizes/TruckPrize2020.jpg" alt="Second slide">
