Fixed prizes image

--- a/prizes.html
+++ b/prizes.html
@@ -122,7 +122,7 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block img-fluid" src="./images/prizes/crop_prize.png" alt="First slide">
+              <img class="d-block img-fluid" src="./images/prizes/crop_prize.PNG" alt="First slide">
             </div>
             
             <!--
