--- a/test.html
+++ b/test.html
@@ -28,7 +28,7 @@
   <meta name="msapplication-TileImage" content="../ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
 </head>
-<body>
+<body onload="createFooter()">
   <div class="page">
     <div class="header container sticky-top">
       <nav class="navbar navbar-expand-md navbar-light bg-light border-bottom border-right border-left rounded-bottom mb-4">
@@ -119,103 +119,14 @@
       </div>
     </div>
   </div>
-  <div class="footer container border border-bottom-0 pb-2 bg-light d-block mx-auto">
-    <div class="row mx-6">
-      <div class="col-lg-4 text-center my-auto">
-        <a href="http://www.scheels.com/" class="title-sponsor">
-          <img src="./images/sponsors/scheels.png" class="img-fluid" alt="Scheels">
-        </a>
-      </div>
-      <div class="col-lg-4 text-center my-auto">
-        <a href="http://www.eauclaireford.com/" class="title-sponsor">
-          <img src="./images/sponsors/ford.png" class="img-fluid" alt="Ford">
-        </a>
-      </div>
-      <div class="col-lg-4 text-center my-auto">
-        <a href="http://www.subway.com/subwayroot/default.aspx" class="title-sponsor">
-          <img src="./images/sponsors/Subway.png" class="img-fluid" alt="Subway">
-        </a>
-      </div>
-    </div>
-    <div class="row mx-6">
-      <div class="col-lg-2 col-sm-6 my-auto">
-        <a href="http://www.weau.com/" class="sponsor">
-          <img src="./images/sponsors/weau13.png" class="img-fluid" alt="WEAU13">
-        </a>
-      </div>
-      <div class="col-lg-2 col-sm-6 my-auto">
-        <a href="http://www.geteskimo.com/" class="sponsor">
-          <img src="./images/sponsors/eskimo.png" class="img-fluid" alt="Eskimo">
-        </a>
-      </div>
-      <div class="col-lg-2 col-sm-6 my-auto">
-        <a href="http://www.megacoop.com/" class="sponsor">
-          <img src="./images/sponsors/megaholiday.png" class="img-fluid" alt="Mega Holiday">
-        </a>
-      </div>
-      <div class="col-lg-2 col-sm-6 my-auto">
-        <a href="http://www.prestigervauto.com/" class="sponsor">
-          <img src="./images/sponsors/prestige.png" class="img-fluid" alt="Prestige">
-        </a>
-      </div>
-    </div>
-    <div class="row mx-6">
-      <div class="col-lg col-6 text-center my-auto">
-        <a href="http://www.uwec.edu/dining/" class="sponsor">
-          <img src="./images/sponsors/dining.png" class="img-fluid" alt="Dining">
-        </a>
-      </div>
-      <div class="col-lg col-6 text-center my-auto">
-        <a href="http://www.theedgepubandeatery.com/" class="sponsor">
-          <img src="./images/sponsors/edge.png" class="img-fluid" alt="The Edge">
-        </a>
-      </div>
-      <div class="col-lg col-6 text-center my-auto">
-        <a href="http://www.theviewonlakewissota.com/" class="sponsor">
-          <img src="./images/sponsors/view.png" class="img-fluid" alt="The View">
-        </a>
-      </div>
-      <div class="col-lg col-6 text-center my-auto">
-        <a href="https://ttmtech.com/" class="sponsor" class="sponsor">
-          <img src="./images/sponsors/ttmtech.png" class="img-fluid" alt="TTMTech">
-        </a>
-      </div>
-      <div class="col-lg col-6 text-center my-auto" class="sponsor">
-        <a href="http://www.xtrememotorsportsllc.com/" class="sponsor">
-          <img src="./images/sponsors/xtreme.png" class="img-fluid" alt="Xtreme">
-        </a>
-      </div>
-      <div class="col-lg col-6 text-center my-auto">
-        <a href="http://www.leinie.com/" class="sponsor">
-          <img src="./images/sponsors/lein.png" class="img-fluid" alt="Leinenkugels">
-        </a>
-      </div>
-      <div class="col-lg col-6 text-center my-auto">
-        <a href="https://www.aceautomall.com/" class="sponsor">
-          <img src="./images/sponsors/AceAutoMall.png" class="img-fluid" alt="Ace Auto Mall">
-        </a>
-      </div>
-      <div class="col-lg col-6 text-center my-auto">
-        <a href="http://www.lakewissotasandbar.com/" class="sponsor">
-          <img src="./images/sponsors/thesandbar.png" class="img-fluid" alt="The SandBar">
-        </a>
-      </div>
-      <!--<div class="col-lg col-6 text-center my-auto">
-        <a href="https://www.grizzlycoolers.com/" class="sponsor">
-          <img src="./images/sponsors/grizzly.png" class="img-fluid" alt="Grizzly Coolers">
-        </a>
-      </div>-->
-      <div class="col-lg col-6 text-center my-auto">
-        <a href="http://www.reconyx.com/" class="sponsor">
-          <img src="./images/sponsors/Reconyx.png" class="img-fluid" alt="Reconyx">
-        </a>
-      </div>
-    </div>
-    <p class="text-center">Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a></p>
-  </div>
+  
+
+<div class="footer container border border-bottom-0 pb-2 bg-light d-block mx-auto pt-2" id="footer"></div>
+
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <script src="./js/results.js"></script>
+  <script src="./scripts/testSponsorFootor.js"></script>
 </body>
 </html>
