Changed Sandbar to SandBar
Updated ticket SandBar location name

--- a/tickets.html
+++ b/tickets.html
@@ -153,7 +153,7 @@
 					<li>UWEC Recreation <span style="color:red">*</span></li>
 					<li>The Edge <span style="color:red">*</span></li>
 					<li>The View <span style="color:red">*</span></li>
-          <li>The Sandbar <span style="color:red">*</span></li>
+          <li>The SandBar <span style="color:red">*</span></li>
 				</ul>
 			</div>
 			<div class="col-12 mx-auto mb-5">
