Added link to flyer

--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
         </div>
         <div class="row px-3 mb-5">
           <span>For contest rules and additional information, visit jigsup.org or contact UWEC recreation at (715)836-3377.</span>
+          <a href="assets/Flyer(email).pdf" target="_blank">Jig's Up Poster</a>
         </div>
       </div>
       <div class="col-lg-6">
