--- a/lodging.html
+++ b/lodging.html
@@ -82,6 +82,9 @@
               <a class="nav-link brand-blue" href="tickets.html">Tickets</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link brand-blue" href="assets/apparel.pdf" target="_blank">Apparel</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link brand-blue" href="contact.html">Contacts</a>
             </li>
             <li class="nav-item">
