--- a/prizes.html
+++ b/prizes.html
@@ -82,6 +82,9 @@
             <a class="nav-link brand-blue" href="tickets.html">Tickets</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link brand-blue" href="assets/apparel.pdf" target="_blank">Apparel</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link brand-blue" href="contact.html">Contacts</a>
           </li>
           <li class="nav-item">
@@ -124,7 +127,7 @@
             <div class="carousel-item active">
               <img class="d-block img-fluid" src="./images/prizes/crop_prize.PNG" alt="First slide">
             </div>
-            
+
             <!--
             <div class="carousel-item">
               <img class="d-block img-fluid" src="./images/prizes/TruckPrize2020.jpg" alt="Second slide">
