--- a/prizes.html
+++ b/prizes.html
@@ -167,7 +167,7 @@
                     <div class="row mb-0">
                       <div class="col-sm-12">
                         <h2 class="brand-blue">Lake Wissota Lion's Club Gun Raffle Winners</h2>
-                        <h6><a href="https://e-clubhouse.org/sites/lakewissota/page-10.php" target="blank">Lake Wissota Lion's Club Website</a></h6>
+                        <h6>Visit: <a href="https://e-clubhouse.org/sites/lakewissota/page-10.php" target="blank">Lake Wissota Lion's Club Website</a></h6>
                         <br>
                       </div>
                     </div>
