Added blank 2020 prize winners

--- a/prizes.html
+++ b/prizes.html
@@ -158,25 +158,60 @@
           <div id="accordion1" class="my-4">
             <div id="accordion">
               <div class="card">
+                <div class="card-header" id="headingThree">
+                    <h5 class="mb-0">
+                      <button class="btn btn-link" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        2020 Prize List
+                      </button>
+                    </h5>
+                </div>
+                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+                  <div class="card-body">
+                    <div class="row mb-4">
+                      <div class="col-sm-12">
+                        <h6 >Check back in January for complete prize list</h6>
+                      </div>
+                    </div>
+                  </div>
+                </div>   
+              </div>
+              <div class="card">
                 <div class="card-header" id="headingFour">
                   <h5 class="mb-0">
                     <button class="btn btn-link" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                      2020 Prize List
+                      2020 Truck, Fish, and Raffle Winners
                     </button>
                   </h5>
                 </div>
                 <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
                   <div class="card-body">
-                    <div class="row mb-0">
+                    <div class="row mb-4">
                       <div class="col-sm-12">
-                        <h2 class="brand-blue">Lake Wissota Lion's Club Gun Raffle Winners</h2>
-                        <h6>Visit: <a href="https://e-clubhouse.org/sites/lakewissota/page-10.php" target="blank">Lake Wissota Lion's Club Website</a></h6>
-                        <br>
+                        <h2 class="brand-blue">2020 Ford F150 Winner</h2>
+                        <h3></h3>
                       </div>
                     </div>
-                    <div class="row mb-0">
+                    <div class="row mb-2">
+              				<div class="col-sm-12">
+                        <h2 class="brand-blue">2020 Fish Prize Winners</h2>
+                        <div class="table-responsive">
+                            <table class="table">
+                              <thead>
+                                <th>Place</th>
+                                <th>Contestant</th>
+                                <th>Weight</th>
+                                <th>Species</th>
+                                <th>Prize</th>
+                              </thead>
+                          </table>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row mb-4">
                       <div class="col-sm-12">
-                        <h6 >Check back in January for complete prize list</h6>
+                        <h2 class="brand-blue">2020 Raffle Winners</h2>
+                        <h6>Visit: <a href="https://e-clubhouse.org/sites/lakewissota/page-10.php" target="blank">Lake Wissota Lion's Club Website</a></h6>
+                        <br>
                       </div>
                     </div>
                   </div>
@@ -911,7 +946,7 @@
                   					</div>
                   				</div>
                   			</div>
-              				</div>
+                      </div>
               			</div>
                   </div>
                 </div>
