--- a/index.html
+++ b/index.html
@@ -257,12 +257,12 @@
         </div>
         <div class="row px-3 d-none d-sm-block">
           <div>
-            <iframe width="435" height="245" src="https://www.youtube.com/embed/lObQaIdp1PU" allowfullscreen></iframe>
+            <iframe width="435" height="245" src="./assets/video/jigsup_commercial.mp4" allowfullscreen></iframe>
           </div>
         </div>
         <div class="row px-3 mb-5 d-none d-sm-block">
           <div>
-            <iframe width="435" height="245" src="https://www.youtube.com/embed/EZO1i0aGs94" allowfullscreen></iframe>
+            <iframe width="435" height="245" src="./assets/video/jigsup_video.mp4" allowfullscreen></iframe>
           </div>
         </div>
       </div>
