Added Monster Energy to sponsors

--- a/directions.html
+++ b/directions.html
@@ -265,11 +265,11 @@
           <img src="./images/sponsors/Reconyx.png" class="img-fluid" alt="Reconyx">
         </a>
       </div>
-      <!--<div class="col-lg col-6 text-center my-auto">
-        <a href="https://www.schuetzys.com/" class="sponsor">
-          <img src="./images/sponsors/schuetzys.png" class="img-fluid" alt="Shuetzy's Tavern">
+      <div class="col-lg col-6 text-center my-auto">
+        <a href="https://www.monsterenergy.com/" class="sponsor">
+          <img src="./images/sponsors/monster.png" class="img-fluid" alt="Monster Energy">
         </a>
-      </div>-->
+      </div>
     </div>
     <p class="text-center my-1">Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a></p>
   </div>
