--- a/sponsors.html
+++ b/sponsors.html
@@ -215,11 +215,11 @@
               <img src="./images/sponsors/Reconyx.png" class="img-fluid" alt="Reconyx">
             </a>
           </div>
-          <!--<div class="col-lg col-6 text-center my-auto">
-            <a href="https://www.schuetzys.com/" class="sponsor">
-              <img src="./images/sponsors/schuetzys.png" class="img-fluid" alt="Shuetzy's Tavern">
+          <div class="col-4 col-md text-center my-auto">
+            <a href="https://www.monsterenergy.com/" class="sponsors">
+              <img src="./images/sponsors/monster.png" class="img-fluid" alt="Monster Energy">
             </a>
-          </div>-->
+          </div>
         </div>
         <div class="row">
           <div class="col-12">
