Updated the one that got away prize

--- a/prizes.html
+++ b/prizes.html
@@ -553,6 +553,11 @@
                     </div>
                     <div class="row mb-4">
                       <div class="col-sm-12">
+                        <h2 class="brand-blue">2020 The One That Got Away Prize Winner</h2>
+                      </div>
+                    </div>
+                    <div class="row mb-4">
+                      <div class="col-sm-12">
                         <h2 class="brand-blue">2020 Raffle Winners</h2>
                         <h6>Visit: <a href="https://e-clubhouse.org/sites/lakewissota/page-10.php" target="blank">Lake Wissota Lion's Club Website</a></h6>
                         <br>
