--- a/liveResults.html
+++ b/liveResults.html
@@ -131,8 +131,7 @@
           </table>
         </div>
       </div>
-    </div>
-  </div>-->
+    </div-->
   <div class="footer container border border-bottom-0 pb-2 bg-light d-block mx-auto pt-2">
     <div class="row mx-6">
       <div class="col-lg-3 text-center my-auto mx-auto">
