Added Raffle Prize list

--- a/prizes.html
+++ b/prizes.html
@@ -504,6 +504,97 @@
                     </div>
                     <div class="row mb-2">
               				<div class="col-sm-12">
+                        <h2 class="brand-blue">2020 Raffle Prize List</h2>
+                        <div class="table-responsive">
+              						<table class="table">
+                            <thead>
+              								<th>Place</th>
+              								<th>Prize</th>
+              							</thead>
+              							<tbody>
+                              <tr>
+                                <th>1</th>
+                                <td>2019 Polaris Sportsman 450 ATV</td>
+                              </tr>
+                              <tr>
+                                <th>2</th>
+                                <td>$500 Scheels Gift Card</td>
+                              </tr>
+                              <tr>
+                                <th>3</th>
+                                <td>$500 Scheels Gift Card</td>
+                              </tr>
+                              <tr>
+                                <th>4</th>
+                                <td>$500 Scheels Gift Card</td>
+                              </tr>
+                              <tr>
+                                <th>5</th>
+                                <td>$500 Scheels Gift Card</td>
+                              </tr>
+                              <tr>
+                                <th>6</th>
+                                <td>Monster Energy Mini Fridge</td>
+                              </tr>
+                              <tr>
+                                <th>7</th>
+                                <td>Monster Energy Fishing Raft</td>
+                              </tr>
+                              <tr>
+                                <th>8</th>
+                                <td>1-night Stay at Ho-Chunk Gaming Black River Falls Hotel</td>
+                              </tr>
+                              <tr>
+                                <th>9</th>
+                                <td>1-night Stay at Mole Lake Casino</td>
+                              </tr>
+                              <tr>
+                                <th>10</th>
+                                <td>$100 Steak Package from Blugold Dining</td>
+                              </tr>
+                              <tr>
+                                <th>11</th>
+                                <td>$100 Steak Package from Blugold Dining</td>
+                              </tr>
+                              <tr>
+                                <th>12</th>
+                                <td>1-night Stay at Lake of the Torches Resort Casino</td>
+                              </tr>
+                              <tr>
+                                <th>13</th>
+                                <td>Green Bay Packer Prize Package</td>
+                              </tr>
+                              <tr>
+                                <th>14</th>
+                                <td>Visit EC/The Local Store basket + The View GC</td>
+                              </tr>
+                              <tr>
+                                <th>15</th>
+                                <td>Monster Energy Backpack and Apparel</td>
+                              </tr>
+                              <tr>
+                                <th>16</th>
+                                <td>EC Express tickets + The View Pizza Party</td>
+                              </tr>
+                              <tr>
+                                <th>17</th>
+                                <td>$25 The Edge</td>
+                              </tr>
+                              <tr>
+                                <th>18</th>
+                                <td>Leinenkugel Paddle + $25 The Edge + The View Pizza Party</td>
+                              </tr>
+                              <tr>
+                                <th>19</th>
+                                <td>Chair + $25 The Edge + The View Pizza Party</td>
+                              </tr>
+                            </tbody>
+                          </table>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row mb-2">
+              				<div class="col-sm-12">
                         <h2 class="brand-blue">2020 The One That Got Away Prize</h2>
                         <div class="table-responsive">
               						<table class="table">
