Added Apparel to prize 17

--- a/prizes.html
+++ b/prizes.html
@@ -592,7 +592,7 @@
                               </tr>
                               <tr>
                                 <th>17</th>
-                                <td>$25 The Edge</td>
+                                <td>$25 The Edge + Apparel</td>
                               </tr>
                               <tr>
                                 <th>18</th>
