--- a/liveResults.html
+++ b/liveResults.html
@@ -114,7 +114,7 @@
           <!--<h5>Join us on February 8th on this page for live results.</h5>-->
         </div>
       </div>
-      <div class="row">
+      <!--<div class="row">
         <div class="col">
           <table id="table" class="table table-striped table-bordered">
             <thead class="thead-light">
@@ -131,7 +131,7 @@
           </table>
         </div>
       </div>
-    </div>
+    </div>-->
   <div class="footer container border border-bottom-0 pb-2 bg-light d-block mx-auto pt-2">
     <div class="row mx-6">
       <div class="col-lg-3 text-center my-auto mx-auto">
