--- a/prizes.html
+++ b/prizes.html
@@ -784,7 +784,7 @@
                     </div>
                     <div class="row mb-2">
               				<div class="col-sm-12">
-                        <h2 class="brand-blue">2020 The One That Got Away Prize</h2>
+                        <h2 class="brand-blue">2020 The One That Got Away Prize Winner</h2>
                         <div class="table-responsive">
               						<table class="table">
               							<tbody>
@@ -798,7 +798,7 @@
                     </div>
                     <div class="row mb-2">
               				<div class="col-sm-12">
-                        <h2 class="brand-blue">2020 Raffle Prize List</h2>
+                        <h2 class="brand-blue">2020 Raffle Prize Winners</h2>
                         <h6>Visit: <a href="https://e-clubhouse.org/sites/lakewissota/page-10.php" target="blank">Lake Wissota Lion's Club Website</a></h6>
                         <div class="table-responsive">
               						<table class="table">
